<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.petero.cuckoo</groupId>
	<artifactId>cuckoo</artifactId>
	<version>1.12.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<modules>
		<module>cuckoo-engine</module>
		<module>cuckoo-uci</module>
		<module>cuckoo-tui</module>
		<module>cuckoo-gui</module>
		<module>cuckoo-app</module>
	</modules>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>21</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
	</properties>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>3.7.0</version>
			</plugin>
		</plugins>
	</reporting>
	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<excludes>
					<exclude>**/.gitkeep</exclude>
					<exclude>**/.keep</exclude>
				</excludes>
			</resource>
		</resources>
	</build>
	<url>https://www.github.com/sauce-code/cuckoo</url>
	<licenses>
		<license>
			<name>GNU GENERAL PUBLIC LICENSE</name>
			<url>LICENSE</url>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>Peter Österlund</name>
			<url>https://hem.bredband.net/petero2b/javachess/index.html</url>
			<email>peterosterlund2@gmail.com</email>
		</developer>
	</developers>
	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub Packages</name>
			<url>https://maven.pkg.github.com/sauce-code/cuckoo</url>
		</repository>
	</distributionManagement>
</project>
